--- a/src/2.0/test.css
+++ b/src/2.0/test.css
@@ -39,6 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: 70px;
 }
 
 .footer {
@@ -85,4 +86,54 @@
 }
 .footer button:hover::after {
   width: 100%;
+}
+
+.topic-container {
+  padding: 1rem;
+  width: 50%;
+  background-color: azure;
+  text-align: center;
+  letter-spacing: 2px;
+  margin-inline: auto;
+  margin-top: 200px;
+  box-shadow: 9.31px 46.57px 74.51px 0px #9a9a9a2b;
+  border: 2px solid;
+  border-radius: 20px;
+}
+.topic-list ul {
+  list-style: none;
+  padding: 20px;
+}
+.topic-list ul li .link {
+  text-decoration: none;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+.link:hover {
+  color: grey;
+}
+.topic-list ul li {
+  margin-block: 5px;
+}
+
+@media (max-width: 720px) {
+  .footer {
+    top: 0;
+    left: 0;
+    flex-direction: row;
+    background-color: rgb(49, 80, 107);
+    height: 8vh;
+    width: 100%;
+    padding: 8px;
+  }
+}
+
+@media (max-width: 430px) {
+  body {
+    font-size: 80%;
+  }
+  .question-number {
+    width: 48vh;
+    height: auto;
+  }
 }
