--- a/src/2.0/load.css
+++ b/src/2.0/load.css
@@ -10,12 +10,17 @@
   border-radius: 50%;
   background: linear-gradient(
         0deg,
-        rgb(0 0 0/50%) 30%,
-        #0000 0 70%,
-        rgb(0 0 0/100%) 0
+        rgba(109, 182, 242, 0.5) 30%,
+        #62dfef00 0 70%,
+        rgb(144, 220, 255) 0
       )
       50%/8% 100%,
-    linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0)
+    linear-gradient(
+        90deg,
+        rgba(45, 182, 216, 0.721) 30%,
+        #00000000 0 70%,
+        rgb(0 0 0/75%) 0
+      )
       50%/100% 8%;
   background-repeat: no-repeat;
   animation: l23 1s infinite steps(12);
