--- a/src/2.0/load.css
+++ b/src/2.0/load.css
@@ -1,48 +1,27 @@
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 65px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: radial-gradient(farthest-side, rgb(255, 255, 255) 94%, #0000)
+      top/8px 8px no-repeat,
+    conic-gradient(#0000 30%, rgb(57, 137, 229));
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: l13 1s infinite linear;
+  position: absolute;
+  top: 50px;
+  left: 45%;
+}
+@keyframes l13 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
 .loading-container {
   position: relative;
 }
 
-/* HTML: <div class="loader"></div> */
-.loader {
-  width: 50px;
-  aspect-ratio: 1;
-  display: grid;
-  border-radius: 50%;
-  background: linear-gradient(
-        0deg,
-        rgba(109, 182, 242, 0.5) 30%,
-        #62dfef00 0 70%,
-        rgb(144, 220, 255) 0
-      )
-      50%/8% 100%,
-    linear-gradient(
-        90deg,
-        rgba(45, 182, 216, 0.721) 30%,
-        #00000000 0 70%,
-        rgb(0 0 0/75%) 0
-      )
-      50%/100% 8%;
-  background-repeat: no-repeat;
-  animation: l23 1s infinite steps(12);
-  position: absolute;
-  left: 50%;
-  top: 280px;
-}
-.loader::before,
-.loader::after {
-  content: "";
-  grid-area: 1/1;
-  border-radius: 50%;
-  background: inherit;
-  opacity: 0.915;
-  transform: rotate(30deg);
-}
-.loader::after {
-  opacity: 0.83;
-  transform: rotate(60deg);
-}
-@keyframes l23 {
-  100% {
-    transform: rotate(1turn);
-  }
+.loader p {
+  color: black;
+  z-index: 1;
 }
